fixing clipping

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -212,7 +212,7 @@ h3 {
 
 #right-content {
     float: left;
-    width: 28%;
+    width: 27.5%;
     padding: 1%;
     margin-left: 3%;
     margin-bottom: 20px;
